bad/add_invalid_types_string_bool.example_compiler_output
ERROR
[1mbad/add_invalid_types_string_bool.lat:3:5: [1;31merror: [0;1maddition is defined only for int values or string values, not `string` and `boolean`[m
	"" + false;
	   [1;32m^[m
